[package]
name = "adv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "common"}
d1 = { path = "d1" }
d2 = { path = "d2" }
d3 = { path = "d3" }
d4 = { path = "d4" }
d5 = { path = "d5" }
d6 = { path = "d6" }
